--- a/chunked_stt.ipynb
+++ b/chunked_stt.ipynb
@@ -30,6 +30,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#courtesy to Effortless English Page and AJ Hoge's podcast\n",
         "!pip install SpeechRecognition pydub"
       ],
       "metadata": {
